...
            "shift.fill",
            "capslock",
            "capslock.fill",
            "globe",
            "keyboard.chevron.compact.down",
            "keyboard.chevron.compact.down.fill",
            "space",
            "return",
            "command",
        ]
    ) {
        self._icon = icon
        self.recommendation = recommendation
...
