...
    },
    "削除": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": ""
...
